# GoIT_tasks

./: README.md
Core/HM_12/: main.py  users.csv  users.json
Core/bot2_creating_contacts/: main.py
Core/bot_creating_contacts/: bot.py
Core/sorting_folder/clean_folder/: clean.py
Web/HM_1/P_2/: AddressBook.py  logs.txt
Web/HM_10/quotes/: manage.py
Web/HM_11/: main.py
Web/HM_11/src/: schemas.py
Web/HM_11_12/: Dockerfile  main.py  requirements.txt  test.db
Web/HM_11_12/docs/: index.rst
Web/HM_11_12/migrations/: env.py
Web/HM_11_12/postgres-data/: postmaster.pid
Web/HM_11_12/src/: schemas.py
Web/HM_11_12/tests/: test_router_contacts.py  test_unit_contacts.py
Web/HM_2/P_1/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
Web/HM_2/P_1/app/: menu.py
Web/HM_2/P_1/app/Address_book/: AdressBook.py  Class.py
Web/HM_2/P_1/app/Notebook/: decorator.py  notes.py  notesclass.py
Web/HM_2/P_1/app/Sorter/: sort.py
Web/HM_2/P_2/: AddressBook.py  Dockerfile  pyproject.toml
Web/HM_2/P_2/data/: logs.txt
Web/HM_3/P_1/: main.py
Web/HM_3/P_2/: main.py
Web/HM_4/: Dockerfile  main.py
Web/HM_5/: rates.py  requirements.txt
Web/HM_5/chat/: log.txt  (+2 more)
Web/HM_6/: Select.sql  new_sql_hm.sqlite  seeds.py  start_select.py
Web/HM_7/: cli_actions.py  main.py  requirements.txt  seeds.py  selects.py  sqlalchemy_example.db
Web/HM_8/: Readme.md  main.py  models.py  seeds.py
Web/HM_9/: Readme.md  authors.json  main.py  models.py  quotes.json  scrapy.cfg  seeds.py  urls.json
sorting_folder/: setup.py
sorting_folder/clean_folder/: __init__.py
(+159 files in other folders)
